--- a/flow2and4/pyduck/auth/templates/auth/emails/signup_verification.html.jinja
+++ b/flow2and4/pyduck/auth/templates/auth/emails/signup_verification.html.jinja
@@ -10,7 +10,7 @@
             pyduck
         </div>
         <div style="text-align:center; font-size: 1.2rem; padding-top: 10px; padding-bottom: 15px;">
-            💌회원가입 인증 메일
+            회원가입 인증 메일
         </div>
         <hr>
         <div style="padding-top: 10px;">
