--- a/flow2and4/pyduck/templates/pyduck/base.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/base.html.jinja
@@ -161,201 +161,7 @@
          tabindex="-1"
          aria-labelledby="modalLabel"
          aria-hidden="true">
-        <div class="modal-dialog"
-             x-data="{ 
-                template: '',
-                username: '',
-                nickname: '',
-                password: '',
-                loginRequired: false,
-                showUsernameDontExist: false,
-                showPasswordDontMatch: false,
-                showNicknameExist: false,
-                showUsernameExist: false,
-                handlehtmx() {
-                    htmx.process(document.body)
-                },
-                showSigninModal() {
-                    let signin = document.querySelector('.btn__signin')
-                    signin.click()
-                }
-            }"
-             @modalsignup.document="template='signup'; $nextTick(() => {handlehtmx()})"
-             @modalsignin.document="template='signin'; $nextTick(() => {handlehtmx()})"
-             @nickname-exists="showNicknameExist=true"
-             @username-exists="showUsernameExist=true"
-             @user-created="template='user-created'"
-             @username-dont-exist="showUsernameDontExist=true"
-             @password-dont-match="showPasswordDontMatch=true"
-             @login-required.document="showSigninModal">
-            <template x-if="template === 'signup'">
-                <div class="modal-content rounded-0">
-                    <form hx-post="{{ url_for('pyduck.auth.sign_up') }}" hx-swap="none">
-                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                        <div class="modal-header">
-                            <h1 class="modal-title fw-bold fs-4" id="modalLabel">
-                                <span class="logo-color"><i class="bi bi-tropical-storm"></i>pyduck</span>
-                            </h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <div>
-                                <div class="pt-3">
-                                    <span class="fw-bold fs-4">👋 환영합니다!!</span>
-                                    <br>회원가입을 위해 아래 양식을 작성해주세요.
-                                </div>
-                            </div>
-                            <div class="pt-4 col-lg-9">
-                                <div>
-                                    <div class="form-floating">
-                                        <input type="email"
-                                               class="form-control rounded-0"
-                                               id="username"
-                                               name="username"
-                                               placeholder="guido@python.com"
-                                               x-model="username"
-                                               @input="username=username.replaceAll(' ', '')"
-                                               required>
-                                        <label for="username">이메일<sup class="fw-bold text-danger">*</sup></label>
-                                    </div>
-                                    <div class="ps-1">
-                                        <small class="text-secondary">아이디 및 인증 용도(타인에게 비공개)</small>
-                                    </div>
-                                    <div class="pt-1 ps-2 text-danger" x-show="showUsernameExist">
-                                        <i class="bi bi-x-circle"></i><span class="ps-1">이미 누군가 사용중인 이메일입니다.</span>
-                                    </div>
-                                </div>
-                                <div class="pt-3">
-                                    <div class="form-floating">
-                                        <input type="password"
-                                               class="form-control rounded-0"
-                                               id="password"
-                                               name="password"
-                                               placeholder="비밀번호"
-                                               minlength="8"
-                                               maxlength="20"
-                                               x-model="password"
-                                               @input="password=password.replaceAll(' ', '')"
-                                               required>
-                                        <label for="password">비밀번호<sup class="fw-bold text-danger">*</sup></label>
-                                    </div>
-                                    <div class="ps-1">
-                                        <small class="text-secondary">8-20자, 공백 불가</small>
-                                    </div>
-                                </div>
-                                <div class="pt-3">
-                                    <div class="form-floating">
-                                        <input type="text"
-                                               class="form-control rounded-0"
-                                               id="nickname"
-                                               name="nickname"
-                                               placeholder="닉네임"
-                                               minlength="2"
-                                               maxlength="20"
-                                               x-model="nickname"
-                                               @input="nickname=nickname.replaceAll(' ', '')"
-                                               required>
-                                        <label for="nickname">닉네임<sup class="fw-bold text-danger">*</sup></label>
-                                    </div>
-                                    <div class="ps-1">
-                                        <small class="text-secondary">2-20자, 공백 불가</small>
-                                    </div>
-                                    <div class="pt-1 ps-2 text-danger" x-show="showNicknameExist">
-                                        <i class="bi bi-x-circle"></i><span class="ps-1">이미 누군가 사용중인 닉네임입니다.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <small class="text-secondary">회원가입 함에 따라, 개인정보정책 및 사이트운영방침에 동의한 것으로 간주합니다.</small>
-                            <button class="btn btn-outline-dark rounded-0 d-flex align-items-center gap-2">
-                                회원가입
-                                <div class="spinner-border spinner-border-sm text-info pyduck-htmx-indicator"
-                                     role="status">
-                                    <span class="visually-hidden">Loading...</span>
-                                </div>
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </template>
-            <template x-if="template === 'signin'">
-                <div class="modal-content rounded-0">
-                    <form hx-post="{{ url_for('pyduck.auth.sign_in') }}" hx-swap="none">
-                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                        <div class="modal-header">
-                            <h1 class="modal-title fw-bold fs-4" id="modalLabel">
-                                <span class="logo-color"><i class="bi bi-tropical-storm"></i>pyduck</span>
-                            </h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <div>
-                                <div class="pt-3">
-                                    <span class="fw-bold fs-4">👋 어서오세요!!</span>
-                                    <br>방문해주셔서 감사합니다.
-                                </div>
-                            </div>
-                            <div class="pt-4 col-lg-9">
-                                <div>
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control rounded-0" id="username" name="username"
-                                               placeholder="guido@python.com" required>
-                                        <label for="username">이메일</label>
-                                    </div>
-                                    <div class="pt-1 ps-2 text-danger" x-show="showUsernameDontExist">
-                                        <i class="bi bi-x-circle"></i><span class="ps-1">존재하지 않는 사용자입니다.</span>
-                                    </div>
-                                </div>
-                                <div class="pt-3">
-                                    <div class="form-floating">
-                                        <input type="password" class="form-control rounded-0" id="password"
-                                               name="password" placeholder="비밀번호" required>
-                                        <label for="password">비밀번호</label>
-                                    </div>
-                                    <div class="pt-1 ps-2 text-danger" x-show="showPasswordDontMatch">
-                                        <i class="bi bi-x-circle"></i><span class="ps-1">비밀번호가 일치하지 않습니다.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button class="btn btn-outline-dark rounded-0">
-                                로그인
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </template>
-            <template x-if="template === 'user-created'">
-                <div class="modal-content rounded-0">
-                    <div class="modal-header">
-                        <h1 class="modal-title fw-bold fs-4" id="modalLabel">
-                            <span class="logo-color"><i class="bi bi-tropical-storm"></i>pyduck</span>
-                        </h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="pt-3">
-                            <span class="fw-bold fs-4">📨 인증메일 전송 완료!!</span>
-                            <div class="pyduck-para pt-3 text-secondary">
-                                [<span x-text="username"></span>]으로 인증 메일을 전송 하였습니다.
-                                메일 내의 인증 링크를 클릭하시면 회원가입이 완료됩니다.
-                            </div>
-                            <div class="pt-3 text-secondary">
-                                최대 3-5분 정도 소요 될 수 있으며, 기재하신 이메일 사이트 정책(예: 카카오)에 따라서
-                                스팸메일함으로 이동 될 수도 있습니다.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button class="btn btn-outline-dark rounded-0" data-bs-dismiss="modal" aria-label="Close">
-                            창 닫기
-                        </button>
-                    </div>
-                </div>
-            </template>
-        </div>
+        <div class="modal-dialog" data-pyduck-modal-manager></div>
     </div>
     <!-- modal [END] -->
     <!-- [START] 3rd-party javascript -->
