--- a/flow2and4/pyduck/community/templates/community/index/index.html.jinja
+++ b/flow2and4/pyduck/community/templates/community/index/index.html.jinja
@@ -200,18 +200,14 @@
                             </div>
                         </div>
                         <div>
-                            {% if current_user.is_authenticated %}
                             <a class="btn btn-primary rounded-0"
-                               href="{{ url_for('pyduck.community.post_new', category=c.code) }}">
-                                글쓰기
-                            </a>
-                            {% else %}
-                            <a class="btn btn-primary rounded-0"
+                               {% if current_user.is_authenticated %}
+                               href="{{ url_for('pyduck.community.post_new', category=c.code) }}"
+                               {% else %}
                                hx-get="{{ url_for('pyduck.community.post_new', category=c.code) }}"
-                               hx-swap="none">
+                               {% endif %}>
                                 글쓰기
                             </a>
-                            {% endif %}
                         </div>
                     </div>
                 </div>
