--- a/flow2and4/pyduck/templates/pyduck/base.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/base.html.jinja
@@ -154,16 +154,36 @@
     {% block toast_manager %}
     {% endblock toast_manager %}
     <!-- toast manager: handle all toasts [END] -->
+
+
     <!-- [START] modal -->
     <div
+         data-pyduck-modal
          class="modal fade"
          id="modal"
          tabindex="-1"
          aria-labelledby="modalLabel"
          aria-hidden="true">
-        <div class="modal-dialog" data-pyduck-modal-manager></div>
+        <div
+             data-pyduck-modal-dialog
+             class="modal-dialog">
+        </div>
     </div>
     <!-- modal [END] -->
+
+
+    <!-- [START] modal triggers --->
+    <button class="d-none"
+            data-bs-toggle="modal"
+            data-bs-target="#modal"
+            hx-get="{{ url_for('pyduck.auth.sign_in') }}"
+            hx-target="[data-pyduck-modal-dialog]"
+            x-data
+            @login-required.document="$el.click()">
+    </button>
+    <!-- modal triggers [END] -->
+
+
     <!-- [START] 3rd-party javascript -->
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
