before production: just saving

--- a/flow2and4/pyduck/community/templates/community/post/post.html.jinja
+++ b/flow2and4/pyduck/community/templates/community/post/post.html.jinja
@@ -322,6 +322,7 @@
             })
             .then((editor) => {
                 htmx.process(document.body);
+                editor.editing.view.focus();
             })
             .catch(error => {
                 console.log(error);
