--- a/flow2and4/pyduck/templates/pyduck/base.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/base.html.jinja
@@ -150,8 +150,36 @@
         </div>
     </div>
     {% include "pyduck/footer/footer.html.jinja" %}
+
+
     <!-- [START] toast manager: handle all toasts -->
     {% block toast_manager %}
+    <div
+         class="toast-manager fixed-top"
+         x-data="{
+            handlePassword() {
+                let toast = bootstrap.Toast.getOrCreateInstance(
+                    document.querySelector('#passwordToast')
+                )
+                toast.show()
+            }
+        }"
+         @password-reset-successfully.document="handlePassword">
+        <div class="toast-container p-3 top-0 end-0">
+            <div id="passwordToast" class="toast text-bg-success" role="alert" aria-live="assertive"
+                 aria-atomic="true">
+                <div class="toast-header">
+                    <i class="bi bi-lightbulb"></i>
+                    <strong class="me-auto ps-1">알림</strong>
+                    <small>방금 전</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    비밀번호가 성공적으로 초기화 되었습니다..
+                </div>
+            </div>
+        </div>
+    </div>
     {% endblock toast_manager %}
     <!-- toast manager: handle all toasts [END] -->
 
