--- a/flow2and4/pyduck/templates/pyduck/data/sidebar.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/data/sidebar.html.jinja
@@ -9,7 +9,13 @@
 "code": "help",
 "emoji": "🙏",
 "name": "묻고 답하기",
-"description": "Python 관련 Q&A로 Pythonista 분들의 도움이 필요합니다!"
+"description": "파이썬 관련 Q&A로 Pythonista 분들의 도움이 필요합니다!"
+},
+{
+"code": "knowledge",
+"emoji": "⛏️",
+"name": "코딩 이야기",
+"description": "파이썬 및 코딩 관련 자유롭게 이야기하는 공간입니다.."
 },
 {
 "code": "life",
@@ -17,20 +23,8 @@
 "name": "사는 이야기",
 "description": "개발자로서 혹은 그냥 사람으로 사는 이야기를 나누는 공간입니다."
 },
-{
-"code": "knowledge",
-"emoji": "⛏️",
-"name": "경험 나누기",
-"description": "파이썬 관련 지식 혹은 프로그래밍 관련 지식을 공유하는 공간입니다."
-},
-{
-"code": "tech",
-"emoji": "✨",
-"name": "기술 이야기",
-"description": "파이썬 관련 생태계 및 그 외 다양한 기술에 대해 이야기 하는 공간입니다."
-}
 ]%}
-{# 
+{#
 {% set sidebar_learning = [
 {
 "code": "programming",
